made changes in the bottom navbar and made the necessary changes to solve the alignment issue

--- a/src/container/LekhakList/LekhakList.css
+++ b/src/container/LekhakList/LekhakList.css
@@ -104,7 +104,7 @@
 
 @media (max-width: 800px) {
     .toggleBtn{
-        padding: 20px 0px 0px 0px;
+        padding: 42px 0px 0px 0px;
     }
 
     .lekhakList{
@@ -121,10 +121,10 @@
     
     .ButtonContainer button {
         margin-left: 2px;
-        width: 54px;
+        width: 52px;
         margin-right: 2px;
         margin-top: 6px;
-        padding: 7px;
+        padding: 6px;
         border-radius: 10px;
     }
     
