--- a/src/container/details/details.css
+++ b/src/container/details/details.css
@@ -104,7 +104,7 @@
       padding-left: 0px;
       align-items: center;  
       padding-top: 0px;
-      margin-bottom: 40px;
+      margin-bottom: 44px;
       padding-left: 0px;
 
     }
